# cookiecutter-lib

./: README.md  cookiecutter.json
{{cookiecutter.gh_repo_name}}/: .bumpversion.cfg  .travis.yml  LICENSE  README.md  requirements_dev.txt  requirements_test.txt  runtests.py  setup.cfg  setup.py  tox.ini
