[metadata]
name = {{cookiecutter.gh_repo_name}}
version = {{cookiecutter.version}}
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
license = MIT
license_file = LICENSE
classifiers =
    {{cookiecutter.development_status}}
{%- if cookiecutter.use_django.lower() == 'y' %}
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 1.11
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
{%- endif %}
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
{%- if cookiecutter.py2_support.lower() == 'y' %}
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
{%- endif %}
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Source = https://github.com/{{cookiecutter.gh_username}}/{{cookiecutter.gh_repo_name}}

[options]
include_package_data = true
packages = {{cookiecutter.package_name}}

[flake8]
max-line-length = {{cookiecutter.line_length}}
exclude = .tox,.git
ignore = F405,W504

[isort]
line_length = {{cookiecutter.line_length}}
multi_line_output = 5
{%- if cookiecutter.use_django.lower() == 'y' %}
known_django = django
{%- endif %}
known_tests = tests
sections = FUTURE,STDLIB,THIRDPARTY{%- if cookiecutter.use_django.lower() == 'y' %},DJANGO{%- endif %},FIRSTPARTY,LOCALFOLDER,TESTS

[coverage:run]
source = {{cookiecutter.package_name}}
